@@ -1,3 +1,3 @@
-EBUILD emacs-lexbind-23.1.9999-r1.ebuild 9847 RMD160 12b99d2ab0242c3b45986102d31256fb0f6aaabd SHA1 ef8a05489ae7b7bcc262afbf27998194038d59af SHA256 679b3b5c254ffa5b8bbd6ce011b23cefd99f63c9d23172b2d17b68acecfba9af
-MISC ChangeLog 1150 RMD160 c215491c519ffee4163f6cc039d61e237d337c70 SHA1 7184239c2ad2defd21497d6bd045801134e5e7b7 SHA256 8a36786b9a193a8056ce78d4f407235792bd4b5898dd8618fe584562fe180ae4
-MISC metadata.xml 1622 RMD160 01a46ab0aebc8acab07a5a874736783791b75c4e SHA1 c2869923f6e835df175a9a6f0d803170bf98fd85 SHA256 7875ea72b5aa0e9dd526c88692c08a3e1598e563d8e2d27e336fd1d5d707cb5c
+EBUILD emacs-lexbind-24.0.9999.ebuild 10258 RMD160 9da114eead6e13210c31af0e874259c71327b79b SHA1 1e88bd7ad2c4efc625502561479a363cb4d00e61 SHA256 0d0d7f840b22cc5ad52431e45c800fb2edc65fb875f95d05b71fa825281bed33
+MISC ChangeLog 1381 RMD160 3ea00e1ab0349306379f3eaad198c798b5ae0edb SHA1 3de56d7bff0ac0d91d5264c977af45db9b4271f5 SHA256 1e7e910bacc02b6bcfa08e4890a5cff6d5267631d8225145a35ed41b2fbf25e1
+MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
