@@ -4,12 +4,12 @@
 
 EAPI=2
 
-inherit autotools elisp-common eutils flag-o-matic
+inherit autotools elisp-common eutils flag-o-matic multilib
 
 if [ "${PV##*.}" = "9999" ]; then
 	inherit bzr
-	EMACS_BRANCH="lexbind"
-	EBZR_REPO_URI="http://bzr.savannah.gnu.org/r/emacs/${EMACS_BRANCH}/"
+	EMACS_BRANCH="lexbind-new"
+	EBZR_REPO_URI="bzr://bzr.savannah.gnu.org/emacs/${EMACS_BRANCH}/"
 	EBZR_CACHE_DIR="emacs-${EMACS_BRANCH#emacs-}"
 	SRC_URI=""
 else
@@ -27,9 +27,9 @@ HOMEPAGE="http://www.gnu.org/software/emacs/
 	http://www.emacswiki.org/emacs/DynamicBindingVsLexicalBinding"
 
 LICENSE="GPL-3 FDL-1.3 BSD as-is MIT W3C unicode"
-SLOT="23"
+SLOT="24"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
-IUSE="alsa dbus gconf gif gpm gtk gzip-el hesiod jpeg kerberos m17n-lib motif png sound source svg tiff toolkit-scroll-bars X Xaw3d xft +xpm"
+IUSE="alsa dbus gconf gif gpm gtk gzip-el hesiod imagemagick jpeg kerberos libxml2 m17n-lib motif png sound source svg tiff toolkit-scroll-bars X Xaw3d xft +xpm"
 RESTRICT="strip"
 
 RDEPEND="sys-libs/ncurses
@@ -45,12 +45,14 @@ RDEPEND="sys-libs/ncurses
 		x11-libs/libXt
 		x11-misc/xbitmaps
 		gconf? ( >=gnome-base/gconf-2.26.2 )
+		libxml2? ( >=dev-libs/libxml2-2.2.0 )
 		gif? ( media-libs/giflib )
 		jpeg? ( media-libs/jpeg:0 )
 		png? ( media-libs/libpng )
 		svg? ( >=gnome-base/librsvg-2.0 )
 		tiff? ( media-libs/tiff )
 		xpm? ( x11-libs/libXpm )
+		imagemagick? ( >=media-gfx/imagemagick-6.6.2 )
 		xft? (
 			media-libs/fontconfig
 			media-libs/freetype
@@ -63,7 +65,7 @@ RDEPEND="sys-libs/ncurses
 		gtk? ( x11-libs/gtk+:2 )
 		!gtk? (
 			Xaw3d? ( x11-libs/Xaw3d )
-			!Xaw3d? ( motif? ( x11-libs/openmotif ) )
+			!Xaw3d? ( motif? ( >=x11-libs/openmotif-2.3:0 ) )
 		)
 	)"
 
@@ -79,10 +81,11 @@ SITEFILE="20${PN}-${SLOT}-gentoo.el"
 
 src_prepare() {
 	# set a fake version number to avoid collisions between SLOTs
-	sed -i -e "/defconst emacs-version/s/23\.1\.[0-9]*/${PV}/" lisp/version.el
+	sed -i -e "/AC_INIT/s/24\.0\.[0-9]*/${PV}/" configure.in
+	sed -i -e "/const char emacs_version/s/24\.0\.[0-9]*/${PV}/" src/emacs.c
 
 	if [ "${PV##*.}" = "9999" ]; then
-		FULL_VERSION=$(grep 'defconst[	 ]*emacs-version' lisp/version.el \
+		FULL_VERSION=$(grep 'const char emacs_version' src/emacs.c \
 			| sed -e 's/^[^"]*"\([^"]*\)".*$/\1/')
 		[ "${FULL_VERSION}" ] || die "Cannot determine current Emacs version"
 		echo
@@ -122,6 +125,8 @@ src_configure() {
 	#unset LDFLAGS
 	if use sh; then
 		replace-flags -O[1-9] -O0		#262359
+	elif use ia64; then
+		replace-flags -O[2-9] -O1		#325373
 	else
 		replace-flags -O[3-9] -O2
 	fi
@@ -140,12 +145,12 @@ src_configure() {
 
 	if use X; then
 		myconf="${myconf} --with-x"
-		myconf="${myconf} $(use_with gconf)"
+		myconf="${myconf} $(use_with gconf) $(use_with libxml2 xml2)"
 		myconf="${myconf} $(use_with toolkit-scroll-bars)"
 		myconf="${myconf} $(use_with gif) $(use_with jpeg)"
 		myconf="${myconf} $(use_with png) $(use_with svg rsvg)"
 		myconf="${myconf} $(use_with tiff) $(use_with xpm)"
-		myconf="${myconf} $(use_with xft)"
+		myconf="${myconf} $(use_with imagemagick) $(use_with xft)"
 
 		if use xft; then
 			myconf="${myconf} $(use_with m17n-lib libotf)"
@@ -191,6 +196,8 @@ src_configure() {
 	econf \
 		--program-suffix=-${EMACS_SUFFIX} \
 		--infodir=/usr/share/info/${EMACS_SUFFIX} \
+		--with-crt-dir=/usr/$(get_libdir) \
+		--without-compress-info \
 		${myconf} || die "econf emacs failed"
 }
 
@@ -214,15 +221,15 @@ src_install () {
 	mv "${D}"/usr/bin/emacs-${EMACS_SUFFIX} "${D}"/usr/bin/${EMACS_SUFFIX} \
 		|| die "moving Emacs executable failed"
 
-	# move info documentation to the correct place
-	for i in "${D}"/usr/share/info/${EMACS_SUFFIX}/*; do
-		mv "${i}" "${i}.info" || die "mv info failed"
-	done
-
 	# move man pages to the correct place
 	for m in "${D}"/usr/share/man/man1/* ; do
 		mv "${m}" "${m%.1}-${EMACS_SUFFIX}.1" || die "mv man failed"
 	done
+
+	# move info dir to avoid collisions with the dir file generated by portage
+	mv "${D}"/usr/share/info/${EMACS_SUFFIX}/dir{,.orig} \
+		|| die "moving info dir failed"
+	touch "${D}"/usr/share/info/${EMACS_SUFFIX}/.keepinfodir
 
 	# avoid collision between slots, see bug #169033 e.g.
 	rm "${D}"/usr/share/emacs/site-lisp/subdirs.el
@@ -239,7 +246,7 @@ src_install () {
 		c=""
 	fi
 
-	sed 's/^X//' >"${SITEFILE}" <<-EOF
+	sed 's/^X//' >"${T}/${SITEFILE}" <<-EOF
 	X
 	;;; ${PN}-${SLOT} site-lisp configuration
 	X
@@ -257,25 +264,28 @@ src_install () {
 	X	   (setcdr q (cons dir (delete dir (cdr q))))
 	X	   (setq Info-directory-list (prune-directory-list (cdr p)))))))
 	EOF
-	elisp-site-file-install "${SITEFILE}" || die
+	elisp-site-file-install "${T}/${SITEFILE}" || die
 
 	dodoc README BUGS || die "dodoc failed"
 }
 
-emacs-infodir-rebuild() {
-	# Depending on the Portage version, the Info dir file is compressed
-	# or removed. It is only rebuilt by Portage if our directory is in
-	# INFOPATH, which is not guaranteed. So we rebuild it ourselves.
-
+pkg_preinst() {
+	# Depending on Portage version and user's settings, the Info dir file
+	# may have been compressed or removed. We rebuild it in both cases.
 	local infodir=/usr/share/info/${EMACS_SUFFIX} f
-	[ -d "${ROOT}"${infodir} ] || return	# may occur with FEATURES=noinfo
-	einfo "Regenerating Info directory index in ${infodir} ..."
-	rm -f "${ROOT}"${infodir}/dir{,.*}
-	for f in "${ROOT}"${infodir}/*.info*; do
-		[[ ${f##*/} != *[0-9].info* && -e ${f} ]] \
-			&& install-info --info-dir="${ROOT}"${infodir} "${f}" &>/dev/null
-	done
-	rmdir "${ROOT}"${infodir} 2>/dev/null	# remove dir if it is empty
+	if [ -f "${D}"${infodir}/dir.orig ]; then
+		# prefer existing file if it has survived to here
+		mv "${D}"${infodir}/dir{.orig,} || die "moving info dir failed"
+	else
+		einfo "Regenerating Info directory index in ${infodir} ..."
+		rm -f "${D}"${infodir}/dir{,.*}
+		for f in "${D}"${infodir}/*; do
+			if [[ ${f##*/} != *-[0-9]* && -e ${f} ]]; then
+				install-info --info-dir="${D}"${infodir} "${f}" \
+					|| die "install-info failed"
+			fi
+		done
+	fi
 }
 
 pkg_postinst() {
@@ -283,9 +293,9 @@ pkg_postinst() {
 	for f in "${ROOT}"/var/lib/games/emacs/{snake,tetris}-scores; do
 		[ -e "${f}" ] || touch "${f}"
 	done
+	chown games:games "${ROOT}"/var/lib/games/emacs
 
 	elisp-site-regen
-	emacs-infodir-rebuild
 	eselect emacs update ifunset
 
 	if use X; then
@@ -310,6 +320,5 @@ pkg_postinst() {
 
 pkg_postrm() {
 	elisp-site-regen
-	emacs-infodir-rebuild
 	eselect emacs update ifunset
 }
