@@ -24,6 +24,10 @@
     font name</flag>
   <flag name='gzip-el'>Compress bundled Emacs Lisp source</flag>
   <flag name='hesiod'>Enable support for <pkg>net-dns/hesiod</pkg></flag>
+  <flag name='imagemagick'>Use <pkg>media-gfx/imagemagick</pkg> for image
+    processing</flag>
+  <flag name='libxml2'>Use <pkg>dev-libs/libxml2</pkg> to parse XML instead
+    of the internal Lisp implementations</flag>
   <flag name='sound'>Enable sound</flag>
   <flag name='toolkit-scroll-bars'>Use the selected toolkit's scrollbars in
     preference to Emacs' own scrollbars</flag>
