@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-lexbind-24.0.9999 (14 Oct 2010)
+
+  14 Oct 2010; Ulrich Mueller <ulm@gentoo.org>
+  -emacs-lexbind-23.1.9999-r1.ebuild, +emacs-lexbind-24.0.9999.ebuild,
+  metadata.xml:
+  Change branch to lexbind-new. Sync from portage tree.
+
   11 Mar 2010; Ulrich Mueller <ulm@gentoo.org>
   emacs-lexbind-23.1.9999-r1.ebuild:
   Sync from portage tree.
